--- a/CTADataRecoder/CTADataRecoder/CTADataRecoder-Info.plist
+++ b/CTADataRecoder/CTADataRecoder/CTADataRecoder-Info.plist
@@ -24,6 +24,8 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Use your location.</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
